fixed book-add animation overlapping searchbar + fixed cart view on small mobile devices

--- a/src/components/Books/Books.module.css
+++ b/src/components/Books/Books.module.css
@@ -27,6 +27,7 @@
   right: 10%;
   width: 40%;
   border-radius: 10px;
+  z-index: 1;
 }
 
 .titlesearchbar {
